--- a/css/main.css
+++ b/css/main.css
@@ -67,9 +67,9 @@ main figure img{
 
     margin: 6%;
     cursor: pointer;
-    border: 1px  aqua solid;
+    border: 1px  red;
     transition: 0.2s ease-in-out;
 }
 main figure img:hover {
-box-shadow: 0px 0px 6px aqua;
+box-shadow: 0px 0px 6px red;
 }
