Alteração das imagens e links nos icones

--- a/css/main.css
+++ b/css/main.css
@@ -32,8 +32,8 @@ main .techs .cards-container {
     
 }
 main .techs .cards-container .card{
-    width: 120px;
-    height: 120px;
+    width: 115px;
+    height: 115px;
     padding: 8px;
     background-color: #eee;
     border-radius: 8px;
@@ -67,9 +67,9 @@ main figure img{
 
     margin: 6%;
     cursor: pointer;
-    border: 1px  red solid;
+    border: 1px whitesmoke solid;
     transition: 0.2s ease-in-out;
 }
 main figure img:hover {
-box-shadow: 0px 0px 6px red;
+box-shadow: 0px 0px 6px white;
 }
