--- a/css/main.css
+++ b/css/main.css
@@ -71,5 +71,5 @@ main figure img{
     transition: 0.2s ease-in-out;
 }
 main figure img:hover {
-box-shadow: 0px 0px 6px white;
+box-shadow: 0px 0px 6px aqua;
 }
