--- a/css/header.css
+++ b/css/header.css
@@ -1,21 +1,26 @@
 header{
     background-color: #222;
-    padding: 25px;
- 
+    padding: 15px;
+    width: 100%;
+    
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
     }
 
     header h1, a{
+        
         font-size: 2.8em;
         font-weight: 200;
         cursor: pointer;
+        
     }
 
     header nav{ 
         display: flex;
         align-items: center;
+        
     }
 
     header nav a{
