--- a/css/main.css
+++ b/css/main.css
@@ -4,16 +4,20 @@ main {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    line-height: 1.6;
+    
 }
 /* Main content */
 
 main .main-content{
     display: flex;
     flex-direction: column;
+    
 }
 main .main-content h2{
     margin-bottom: 2%;
     font-size: 2.2em;
+    
 }
 main .main-content .text{
     margin-bottom: 10%;
@@ -22,6 +26,7 @@ main .main-content .text p{
     width: 75%;
     font-size: 1.2em;
     font-weight: 300;
+    
 }
 
 /* cards */
@@ -30,26 +35,32 @@ main .techs .cards-container {
     display: flex;
     align-items: center;
     
+    
 }
 main .techs .cards-container .card{
-    width: 115px;
-    height: 115px;
-    padding: 8px;
+    width: 99px;
+    height: 106px;
+    padding: 10px;
     background-color: #eee;
     border-radius: 8px;
-    margin-right: 1.8em;
+    margin-right: 0.9em;
+    margin-left: 0.9em;
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 
     transition: box-shadow 0.25s ease-in-out;
 }
 main .techs .cards-container .card .img {
     width: 80%;
+
 }
 main .techs .cards-container .card:hover{
+ 
     box-shadow: 0px 0px 8px aqua;
+    
 }
 
 /* figure */
@@ -59,11 +70,13 @@ main figure{
     flex-direction: column;
     align-items:center;
     justify-content: center;
+    
 }
 main figure img{
     width: 350px;
     height: 350px;
     border-radius: 175px;
+    
 
     margin: 6%;
     cursor: pointer;
@@ -73,3 +86,4 @@ main figure img{
 main figure img:hover {
 box-shadow: 0px 0px 6px aqua;
 }
+  
