--- a/css/responsive.css
+++ b/css/responsive.css
@@ -55,4 +55,23 @@
      }
     
 }
+@media (max-width: 1200px){
+    footer {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        font-size: 0.7em;
 
+        text-align: center;
+    }
+}
+@media (max-width: 700px){
+    footer {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        
+
+        text-align: center;
+    }
+}
