--- a/css/header.css
+++ b/css/header.css
@@ -1,38 +1,41 @@
-header{
+header {
     background-color: #000000;
     padding: 15px;
     width: 100%;
-    
+
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
-    }
 
-    header h1, a{
-        
-        font-size: 2.8em;
-        font-weight: 200;
-        cursor: pointer;
-        
-    }
+}
 
-    header nav{ 
-        display: flex;
-        align-items: center;
-        
-    }
+header h1,
+a {
 
-    header nav a{
-        margin-right: 1.3em;
-        font-size: 1.5em;
-    }
+    font-size: 2.8em;
+    font-weight: 200;
+    cursor: pointer;
 
-    header h1, a{
-        color: rgb(150, 137, 137);
-        transition: 0.2s ease-in-out;
-    }
+}
 
-    header h1:hover, a:hover{
-        color: #4a645e;
-    }
+header nav {
+    display: flex;
+    align-items: center;
+
+}
+
+header nav a {
+    margin-right: 1.3em;
+    font-size: 1.5em;
+}
+
+header h1,
+a {
+    color: rgb(150, 137, 137);
+    transition: 0.2s ease-in-out;
+}
+
+header h1:hover,
+a:hover {
+    color: #4a645e;
+}
