alteração em foto

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,7 +1,6 @@
-@media (max-width: 1200px) {
+@media screen and (max-width: 1200px) {
     main {
         width: 100%;
-
         flex-direction: column;
         align-items: center;
         justify-content: center;
@@ -10,7 +9,6 @@
     .main-content {
         width: 100%;
         align-items: center;
-
         margin-bottom: 15%;
     }
 
@@ -25,18 +23,18 @@
 
     }
 
-    main .techs .cards-conteiner,
+    main .techs .cards-container,
     .main-content .text p {
         margin-top: 32px;
     }
+   
 }
 
-@media (max-width: 700px) {
+@media screen and (max-width: 700px) {
     header {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-
         text-align: center;
     }
 
@@ -52,7 +50,7 @@
         font-size: 1em;
     }
 
-    main .techs .cards-conteiner .card {
+    main .techs .cards-container .card {
         width: 60px;
         height: 60px;
     }
@@ -66,27 +64,39 @@
         width: 250px;
         height: 250px;
     }
+   
 
 }
 
-@media (max-width: 1200px) {
+@media (min-width: 300px) and (max-width:1200px){
+    .picture {
+        width: 18rem;
+        height: 18rem;
+        background-image: url(/img/techs/1111.jpg);
+        background-size: cover;
+        border-radius: 50%;
+        margin: 6%;
+        display: flex;
+    }
+    .container{
+        text-align: justify;
+    }
+}
+@media screen and(max-width: 1200px) {
     footer {
         flex-direction: column;
         align-items: center;
         justify-content: center;
         font-size: 0.7em;
-
         text-align: center;
     }
 }
 
-@media (max-width: 700px) {
+@media screen and (max-width: 700px) {
     footer {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-
-
         text-align: center;
     }
 }
