--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 main {
     padding: 5%;
-
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -31,9 +31,9 @@ main .main-content .text p {
 
 /* cards */
 
-main .techs .cards-container {
-    display: flex;
-    align-items: center;
+.cards-container {
+    display: grid;
+    grid-template-columns: repeat(3, 100px);
 }
 
 main .techs .cards-container .card {
@@ -61,21 +61,47 @@ main .techs .cards-container .card:hover {
     box-shadow: 0px 0px 8px rgb(55, 121, 121);
 }
 
-/* figure */
+.picture{
+    width: 95rem;
+    height: 25rem;
+    background-image: url("/img/techs/1111.jpg");
+    background-size: cover;
+    border-radius: 50%;
+    margin: 6%;
+    align-items: center;
+    display: flex;
+    justify-content: space-between;  
+     
+}
+.picture:hover .panel-name{
+    opacity: 1;
+    transition: all 0.5s;
+}
+.panel-name{
+    width: 100%;
+    margin-bottom: -30px;
+    opacity: 0;
+    align-self: flex-end;
+    text-align: center;
+}
 
+
+
+/* figure */
+/* 
 main figure {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-image: url("/img/techs/1111.jpg");
+
 }
 
 main figure img {
     width: 340px;
     height: 340px;
     border-radius: 195px;
-
-
     margin: 6%;
     cursor: pointer;
     border: 1px rgb(150, 137, 137);
@@ -84,4 +110,4 @@ main figure img {
 
 main figure img:hover {
     box-shadow: 0px 0px 6px rgb(55, 121, 121);
-}
+} */
