--- a/css/header.css
+++ b/css/header.css
@@ -38,3 +38,14 @@ header h1:hover,
 a:hover {
     color: #4a645e;
 }
+.fa-github {
+    color: #436ead;
+}
+.fa-linkedin {
+    color: #154285;}
+.fa-instagram {
+    color: #d6188d;
+}
+.fa-twitter {
+    color: #1da1f2;
+}
